# qrev-email-verification

./: .gitignore  Makefile  README.md  pyproject.toml
qrev_email_verification/: __init__.py  email_verification.py  email_verifying_service.py
qrev_email_verification/models/: models.py
qrev_email_verification/services/millionverifier/: api.py  models.py  mongo_api.py
qrev_email_verification/services/zerobounce/: api.py  models.py  mongo_api.py
scripts/: add_verification_to_csv.py
tests/data/examples/millionverifier/: invalid_example1.json
tests/data/examples/zerobounce/: invalid_example1.json  invalid_example2.json
tests/services/: conftest.py  test_millionverifier.py  test_millionverifier_mongo.py  test_zerobounce.py
