[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["leeparnell <152523161+leeparnell@users.noreply.github.com>"]
description = ""
name = "qrev-email-verification"
packages = [{ include = "qrev_email_verification"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.11"
pydantic-settings = "^2.3.4"
pymongo = "^4.8.0"
qrev-cache = {develop = true, path = "../qrev-cache"}
requests = "^2.32.3"
sympy = "^1.12.1"
pi-conf = "^0.7.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
types-requests = "^2.32.0.20240622"
pi-conf = "^0.7.7.9"

[tool.tomlsort]
all = true
in_place = true
overrides."tool.poetry.dependencies".first = ["python"]
